[gd_scene load_steps=4 format=2]

[ext_resource path="res://Textures/Enemy3.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy3.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.1235, 16 )

[node name="Enemy" type="Area2D"]
collision_layer = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
speed = 20

[node name="EnemyBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Canon1" type="Position2D" parent="."]
position = Vector2( 0, 16.0289 )

[node name="Canon2" type="Position2D" parent="."]
position = Vector2( 16.2278, 16.0289 )

[node name="Canon3" type="Position2D" parent="."]
position = Vector2( -16.0424, 16.0289 )

[node name="Shoot" type="Timer" parent="."]
wait_time = 1.5

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="timeout" from="Shoot" to="." method="_on_Shoot_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
